AC_INIT(README)

dnl Define the release numbers here

VERSION_MAJOR=1
VERSION_MINOR=0
VERSION_RELEASE=2

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_CHECK_HEADERS(unistd.h)

CFLAGS="-fsigned-char -funroll-loops -Wall -g -O2"

case "$target" in
    *i?86*)
        ARCH=x86 ;;
    *alpha*)
        CFLAGS="$CFLAGS -mcpu=ev4 -Wa,-mall"
        ARCH=alpha ;; 
    *)
        ARCH=`uname -m` ;;
esac
OS=`uname -s`

dnl Look for the XML libraries

AC_PATH_PROG(HAVEXML, xml-config, $PATH)
if test ! -z "$HAVEXML"; then
    XML_CFLAGS=`$HAVEXML --cflags`
    XML_PREFIX=`$HAVEXML --prefix`

    CFLAGS="$CFLAGS $XML_CFLAGS"
    LIBS="$LIBS $XML_PREFIX/lib/libxml.a"
else
    AC_MSG_ERROR([*** xml-config not found. You need a working libxml installation.])
fi

SETUPDB_VERSION=1.0.0
SETUPDB="`pwd`/../loki_setupdb-$SETUPDB_VERSION"
if test ! -d "$SETUPDB"; then
    SETUPDB="`pwd`/../loki_setupdb"
fi

AC_ARG_WITH(setupdb,
[  --with-setupdb            with setupdb library at  [default=../loki_setupdb]],
              ,   with_setupdb=$SETUPDB)
if test x$with_setupdb != x$SETUPDB; then
        SETUPDB=$with_setupdb
fi

dnl Check for correct setupdb installation

if test -f $SETUPDB/$ARCH/libsetupdb.a; then
    AC_MSG_RESULT([SetupDB library found in $SETUPDB/$ARCH])
else
    AC_MSG_ERROR([*** Please compile setupdb first!])
fi

CFLAGS="$CFLAGS -I$SETUPDB"

AC_SUBST(SETUPDB)
AC_SUBST(ARCH)
AC_SUBST(OS)
AC_SUBST(VERSION_MAJOR)
AC_SUBST(VERSION_MINOR)
AC_SUBST(VERSION_RELEASE)

AC_OUTPUT([Makefile])
